samples/_failures_safe/1761551783_1f6de8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7d5e86b.c: In function ‘main’:
./samples/SAFE/__tmp_e7d5e86b.c:176:5: error: expected expression at end of input
  176 |     printf("Tokens found: %d\n",
      |     ^~~~~~
./samples/SAFE/__tmp_e7d5e86b.c:176:5: error: expected declaration or statement at end of input
